--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://efeturkerr.github.io/Personal-Website",
+  "homepage": "https://efeturkerr.github.io/",
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
